Scrollbar no longer visible. Several grids addd to box classes, body element now given a flex-direction of column. Several keyframe animations added, as well as translate effects, transition effects, and opacity/filter effects.

--- a/style.css
+++ b/style.css
@@ -9,13 +9,53 @@ body {
 }
 
 body {
-    background-image: url("images/Blank Background.jpg");
+    background-color: #1e1e1e;
     background-size: cover;
     height: 100%;
     width: 100%;
-    display: flex;
+    display: grid;
+    flex-direction: column;
+    place-items: center;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+.main {
+    width: 100%;
+    height: 1350px;
+    display: grid;
     align-content: center;
     justify-content: center;
+}
+
+.box {
+    width: 50%;
+    height: 1400px;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+}
+
+.text {
+    opacity: 0;
+    transform: translateY(50%);
+    filter: blur(10px);
+    transition: all 2s;
+    text-align: center;
+}
+
+
+
+.show {
+    opacity: 1;
+    transform: translateY(0);
+    filter: blur(0);
+}
+
+.box:first-of-type {
+
 }
 
 h1, h2 {
@@ -34,29 +74,24 @@ h2 {
 }
 
 .object {
-    margin: 0 800px 0 0;
+    animation: objectSlide1 2000ms;
+}
+
+.object2 {
+    animation: objectSlide2 2200ms;
 }
 
 .object2:hover {
     cursor: default;
+    transition-timing-function: ease;
+    transition: 2s;
 }
 
 .object3 {
     font-size: 30px;
     -webkit-text-stroke: 0.4px rgb(255, 255, 255);
-    margin: 0 0 0 550px;
-}
-
-#control {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr;
-    z-index: 1;
-    position: absolute;
-    align-items: center;
-    justify-items: center;
-    height: 20%;
-    margin-top: 300px;
+    animation: objectSlide3 2000ms;
+    margin-left: 400px;
 }
 
 .test {
@@ -68,3 +103,49 @@ h2 {
     overflow-y: hidden;
     z-index: 2;
 }
+
+/* Animations */
+
+@keyframes objectSlide1 {
+    0% {
+        transform: translateY(-3000%);
+        opacity: 0;
+        filter: blur(10px);
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+@keyframes objectSlide2 {
+    0% {
+        transform: translateX(3000%);
+        opacity: 0;
+        filter: blur(10px);
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+@keyframes objectSlide3 {
+    0% {
+        transform: translateY(3000%);
+        opacity: 0;
+        filter: blur(10px);
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+
